--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Page title</title>
-  <link rel="stylesheet" href="./sass/index.scss" />
+  <link rel="stylesheet" href="style.css" />
   <script type="module" src="./index.js"></script>
 </head>
 
@@ -13,12 +13,14 @@
   <header>
     <div>
       <a href="#">Home</a>
-      <a href="./favirite.html">Favorite</a>
+      <a href="./favorite.html">Favorite</a>
       <a href="./checkout.html">Checkout</a>
     </div>
   </header>
-  <!-- ❗️❗️❗️ Add partials like so for every page -->
-  <include src="./partials/example.html"></include>
+
+  <input type="text" class="js-search">
+  <ul class="js-list"></ul>
+
 </body>
 
 </html>
